# etl_project

./: README.md  dune-project  etl_project.opam  monthly_averages.csv
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: etl_lib.cma  etl_lib.cmxa  etl_lib.cmxs  etl_lib.ml-gen
_build/default/lib/.etl_lib.objs/: etl_lib__Impure.impl.all-deps  etl_lib__Impure.impl.d  etl_lib__Pure.impl.d
_build/default/lib/.etl_lib.objs/byte/: etl_lib.cmi  etl_lib.cmo  etl_lib.cmt  etl_lib__Impure.cmi  etl_lib__Impure.cmo  etl_lib__Impure.cmt  etl_lib__Pure.cmi  etl_lib__Pure.cmo  etl_lib__Pure.cmt
_build/default/lib/.etl_lib.objs/native/: etl_lib.cmx  etl_lib__Impure.cmx  etl_lib__Pure.cmx
_build/default/lib/.merlin-conf/: lib-etl_lib
_build/default/test/: test_pure.ml
_build/default/test/.merlin-conf/: exe-test_pure
_build/default/test/.test_pure.eobjs/byte/: dune__exe__Test_pure.cmi  dune__exe__Test_pure.cmti
_build/default/test/.test_pure.eobjs/native/: dune__exe__Test_pure.cmx
lib/: dune  impure.ml  pure.ml
test/: dune
